minor refactoring, java 21 sequencedCollection method use